parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> buildClassOrFunc
Rule 2     buildClassOrFunc -> classDecl
Rule 3     buildClassOrFunc -> funcDef
Rule 4     classDecl -> CLASS ID LBRACE RBRACE
Rule 5     classDecl -> CLASS ID LBRACE memberDecl RBRACE
Rule 6     memberDecl -> memberFuncDecl
Rule 7     memberDecl -> memberVarDecl
Rule 8     memberDecl -> memberDecl memberDecl
Rule 9     memberFuncDecl -> FUNCTION ID COLON LPAREN fParams RPAREN ARROW returnType
Rule 10    memberFuncDecl -> CONSTRUCTOR COLON LPAREN fParams RPAREN
Rule 11    memberFuncDecl -> FUNCTION ID COLON LPAREN RPAREN ARROW returnType
Rule 12    memberFuncDecl -> CONSTRUCTOR COLON LPAREN RPAREN
Rule 13    memberVarDecl -> TYPE ID COLON TYPE SEMICOLON
Rule 14    memberVarDecl -> TYPE ID COLON TYPE LBRACKET INTLIT RBRACKET SEMICOLON
Rule 15    funcDef -> funcHead funcBody
Rule 16    funcHead -> FUNCTION LPAREN ID RPAREN ARROW returnType
Rule 17    funcHead -> FUNCTION LPAREN ID construct RPAREN LPAREN fParams RPAREN ARROW returnType
Rule 18    funcHead -> FUNCTION LPAREN RPAREN ARROW returnType
Rule 19    funcHead -> FUNCTION LPAREN ID construct RPAREN LPAREN RPAREN ARROW returnType
Rule 20    construct -> <empty>
Rule 21    funcBody -> LBRACE RBRACE
Rule 22    funcBody -> LBRACE statement RBRACE
Rule 23    statement -> assignStat
Rule 24    statement -> ifStat
Rule 25    statement -> whileStat
Rule 26    statement -> readStat
Rule 27    statement -> writeStat
Rule 28    statement -> returnStat
Rule 29    statement -> functionCall
Rule 30    assignStat -> variable assignOp expr
Rule 31    ifStat -> IF LPAREN relExpr RPAREN THEN statBlock ELSE statBlock
Rule 32    whileStat -> WHILE LPAREN relExpr RPAREN statBlock
Rule 33    readStat -> READ LPAREN variable RPAREN
Rule 34    writeStat -> WRITE LPAREN expr RPAREN
Rule 35    returnStat -> RETURN LPAREN expr RPAREN
Rule 36    functionCall -> ID LPAREN aParams RPAREN
Rule 37    statBlock -> LBRACE statement RBRACE
Rule 38    expr -> arithExpr
Rule 39    expr -> relExpr
Rule 40    relExpr -> arithExpr relOp arithExpr
Rule 41    arithExpr -> term addOp arithExpr
Rule 42    arithExpr -> term
Rule 43    term -> factor multOp term
Rule 44    term -> factor
Rule 45    factor -> variable
Rule 46    factor -> functionCall
Rule 47    factor -> INTLIT
Rule 48    factor -> FLOATLIT
Rule 49    factor -> LPAREN arithExpr RPAREN
Rule 50    factor -> NOT factor
Rule 51    factor -> SIGN factor
Rule 52    variable -> ID idnest
Rule 53    variable -> ID idnest indice
Rule 54    idnest -> DOT ID
Rule 55    idnest -> DOT ID idnest
Rule 56    indice -> LBRACKET arithExpr RBRACKET
Rule 57    arraySize -> LBRACKET INTLIT RBRACKET
Rule 58    arraySize -> LBRACKET RBRACKET
Rule 59    type -> TYPE
Rule 60    type -> VOID
Rule 61    returnType -> type
Rule 62    returnType -> VOID
Rule 63    fParams -> ID COLON type arraySize COMMA fParams
Rule 64    fParams -> <empty>
Rule 65    aParams -> expr COMMA aParams
Rule 66    aParams -> <empty>
Rule 67    assignOp -> EQ
Rule 68    relOp -> EQ
Rule 69    relOp -> NEQ
Rule 70    relOp -> LT
Rule 71    relOp -> GT
Rule 72    relOp -> LE
Rule 73    addOp -> ADD
Rule 74    addOp -> SUB
Rule 75    multOp -> MULT
Rule 76    multOp -> DIV

Terminals, with rules where they appear

ADD                  : 73
ARROW                : 9 11 16 17 18 19
CLASS                : 4 5
COLON                : 9 10 11 12 13 14 63
COMMA                : 63 65
CONSTRUCTOR          : 10 12
DIV                  : 76
DOT                  : 54 55
ELSE                 : 31
EQ                   : 67 68
FLOATLIT             : 48
FUNCTION             : 9 11 16 17 18 19
GT                   : 71
ID                   : 4 5 9 11 13 14 16 17 19 36 52 53 54 55 63
IF                   : 31
INTLIT               : 14 47 57
LBRACE               : 4 5 21 22 37
LBRACKET             : 14 56 57 58
LE                   : 72
LPAREN               : 9 10 11 12 16 17 17 18 19 19 31 32 33 34 35 36 49
LT                   : 70
MULT                 : 75
NEQ                  : 69
NOT                  : 50
RBRACE               : 4 5 21 22 37
RBRACKET             : 14 56 57 58
READ                 : 33
RETURN               : 35
RPAREN               : 9 10 11 12 16 17 17 18 19 19 31 32 33 34 35 36 49
SEMICOLON            : 13 14
SIGN                 : 51
SUB                  : 74
THEN                 : 31
TYPE                 : 13 13 14 14 59
VOID                 : 60 62
WHILE                : 32
WRITE                : 34
error                : 

Nonterminals, with rules where they appear

aParams              : 36 65
addOp                : 41
arithExpr            : 38 40 40 41 49 56
arraySize            : 63
assignOp             : 30
assignStat           : 23
buildClassOrFunc     : 1
classDecl            : 2
construct            : 17 19
expr                 : 30 34 35 65
fParams              : 9 10 17 63
factor               : 43 44 50 51
funcBody             : 15
funcDef              : 3
funcHead             : 15
functionCall         : 29 46
idnest               : 52 53 55
ifStat               : 24
indice               : 53
memberDecl           : 5 8 8
memberFuncDecl       : 6
memberVarDecl        : 7
multOp               : 43
prog                 : 0
readStat             : 26
relExpr              : 31 32 39
relOp                : 40
returnStat           : 28
returnType           : 9 11 16 17 18 19
statBlock            : 31 31 32
statement            : 22 37
term                 : 41 42 43
type                 : 61 63
variable             : 30 33 45
whileStat            : 25
writeStat            : 27

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . buildClassOrFunc
    (2) buildClassOrFunc -> . classDecl
    (3) buildClassOrFunc -> . funcDef
    (4) classDecl -> . CLASS ID LBRACE RBRACE
    (5) classDecl -> . CLASS ID LBRACE memberDecl RBRACE
    (15) funcDef -> . funcHead funcBody
    (16) funcHead -> . FUNCTION LPAREN ID RPAREN ARROW returnType
    (17) funcHead -> . FUNCTION LPAREN ID construct RPAREN LPAREN fParams RPAREN ARROW returnType
    (18) funcHead -> . FUNCTION LPAREN RPAREN ARROW returnType
    (19) funcHead -> . FUNCTION LPAREN ID construct RPAREN LPAREN RPAREN ARROW returnType

    CLASS           shift and go to state 5
    FUNCTION        shift and go to state 7

    prog                           shift and go to state 1
    buildClassOrFunc               shift and go to state 2
    classDecl                      shift and go to state 3
    funcDef                        shift and go to state 4
    funcHead                       shift and go to state 6

state 1

    (0) S' -> prog .



state 2

    (1) prog -> buildClassOrFunc .

    $end            reduce using rule 1 (prog -> buildClassOrFunc .)


state 3

    (2) buildClassOrFunc -> classDecl .

    $end            reduce using rule 2 (buildClassOrFunc -> classDecl .)


state 4

    (3) buildClassOrFunc -> funcDef .

    $end            reduce using rule 3 (buildClassOrFunc -> funcDef .)


state 5

    (4) classDecl -> CLASS . ID LBRACE RBRACE
    (5) classDecl -> CLASS . ID LBRACE memberDecl RBRACE

    ID              shift and go to state 8


state 6

    (15) funcDef -> funcHead . funcBody
    (21) funcBody -> . LBRACE RBRACE
    (22) funcBody -> . LBRACE statement RBRACE

    LBRACE          shift and go to state 10

    funcBody                       shift and go to state 9

state 7

    (16) funcHead -> FUNCTION . LPAREN ID RPAREN ARROW returnType
    (17) funcHead -> FUNCTION . LPAREN ID construct RPAREN LPAREN fParams RPAREN ARROW returnType
    (18) funcHead -> FUNCTION . LPAREN RPAREN ARROW returnType
    (19) funcHead -> FUNCTION . LPAREN ID construct RPAREN LPAREN RPAREN ARROW returnType

    LPAREN          shift and go to state 11


state 8

    (4) classDecl -> CLASS ID . LBRACE RBRACE
    (5) classDecl -> CLASS ID . LBRACE memberDecl RBRACE

    LBRACE          shift and go to state 12


state 9

    (15) funcDef -> funcHead funcBody .

    $end            reduce using rule 15 (funcDef -> funcHead funcBody .)


state 10

    (21) funcBody -> LBRACE . RBRACE
    (22) funcBody -> LBRACE . statement RBRACE
    (23) statement -> . assignStat
    (24) statement -> . ifStat
    (25) statement -> . whileStat
    (26) statement -> . readStat
    (27) statement -> . writeStat
    (28) statement -> . returnStat
    (29) statement -> . functionCall
    (30) assignStat -> . variable assignOp expr
    (31) ifStat -> . IF LPAREN relExpr RPAREN THEN statBlock ELSE statBlock
    (32) whileStat -> . WHILE LPAREN relExpr RPAREN statBlock
    (33) readStat -> . READ LPAREN variable RPAREN
    (34) writeStat -> . WRITE LPAREN expr RPAREN
    (35) returnStat -> . RETURN LPAREN expr RPAREN
    (36) functionCall -> . ID LPAREN aParams RPAREN
    (52) variable -> . ID idnest
    (53) variable -> . ID idnest indice

    RBRACE          shift and go to state 13
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    READ            shift and go to state 25
    WRITE           shift and go to state 26
    RETURN          shift and go to state 27
    ID              shift and go to state 28

    statement                      shift and go to state 14
    assignStat                     shift and go to state 15
    ifStat                         shift and go to state 16
    whileStat                      shift and go to state 17
    readStat                       shift and go to state 18
    writeStat                      shift and go to state 19
    returnStat                     shift and go to state 20
    functionCall                   shift and go to state 21
    variable                       shift and go to state 22

state 11

    (16) funcHead -> FUNCTION LPAREN . ID RPAREN ARROW returnType
    (17) funcHead -> FUNCTION LPAREN . ID construct RPAREN LPAREN fParams RPAREN ARROW returnType
    (18) funcHead -> FUNCTION LPAREN . RPAREN ARROW returnType
    (19) funcHead -> FUNCTION LPAREN . ID construct RPAREN LPAREN RPAREN ARROW returnType

    ID              shift and go to state 29
    RPAREN          shift and go to state 30


state 12

    (4) classDecl -> CLASS ID LBRACE . RBRACE
    (5) classDecl -> CLASS ID LBRACE . memberDecl RBRACE
    (6) memberDecl -> . memberFuncDecl
    (7) memberDecl -> . memberVarDecl
    (8) memberDecl -> . memberDecl memberDecl
    (9) memberFuncDecl -> . FUNCTION ID COLON LPAREN fParams RPAREN ARROW returnType
    (10) memberFuncDecl -> . CONSTRUCTOR COLON LPAREN fParams RPAREN
    (11) memberFuncDecl -> . FUNCTION ID COLON LPAREN RPAREN ARROW returnType
    (12) memberFuncDecl -> . CONSTRUCTOR COLON LPAREN RPAREN
    (13) memberVarDecl -> . TYPE ID COLON TYPE SEMICOLON
    (14) memberVarDecl -> . TYPE ID COLON TYPE LBRACKET INTLIT RBRACKET SEMICOLON

    RBRACE          shift and go to state 31
    FUNCTION        shift and go to state 35
    CONSTRUCTOR     shift and go to state 36
    TYPE            shift and go to state 37

    memberDecl                     shift and go to state 32
    memberFuncDecl                 shift and go to state 33
    memberVarDecl                  shift and go to state 34

state 13

    (21) funcBody -> LBRACE RBRACE .

    $end            reduce using rule 21 (funcBody -> LBRACE RBRACE .)


state 14

    (22) funcBody -> LBRACE statement . RBRACE

    RBRACE          shift and go to state 38


state 15

    (23) statement -> assignStat .

    RBRACE          reduce using rule 23 (statement -> assignStat .)


state 16

    (24) statement -> ifStat .

    RBRACE          reduce using rule 24 (statement -> ifStat .)


state 17

    (25) statement -> whileStat .

    RBRACE          reduce using rule 25 (statement -> whileStat .)


state 18

    (26) statement -> readStat .

    RBRACE          reduce using rule 26 (statement -> readStat .)


state 19

    (27) statement -> writeStat .

    RBRACE          reduce using rule 27 (statement -> writeStat .)


state 20

    (28) statement -> returnStat .

    RBRACE          reduce using rule 28 (statement -> returnStat .)


state 21

    (29) statement -> functionCall .

    RBRACE          reduce using rule 29 (statement -> functionCall .)


state 22

    (30) assignStat -> variable . assignOp expr
    (67) assignOp -> . EQ

    EQ              shift and go to state 40

    assignOp                       shift and go to state 39

state 23

    (31) ifStat -> IF . LPAREN relExpr RPAREN THEN statBlock ELSE statBlock

    LPAREN          shift and go to state 41


state 24

    (32) whileStat -> WHILE . LPAREN relExpr RPAREN statBlock

    LPAREN          shift and go to state 42


state 25

    (33) readStat -> READ . LPAREN variable RPAREN

    LPAREN          shift and go to state 43


state 26

    (34) writeStat -> WRITE . LPAREN expr RPAREN

    LPAREN          shift and go to state 44


state 27

    (35) returnStat -> RETURN . LPAREN expr RPAREN

    LPAREN          shift and go to state 45


state 28

    (36) functionCall -> ID . LPAREN aParams RPAREN
    (52) variable -> ID . idnest
    (53) variable -> ID . idnest indice
    (54) idnest -> . DOT ID
    (55) idnest -> . DOT ID idnest

    LPAREN          shift and go to state 46
    DOT             shift and go to state 48

    idnest                         shift and go to state 47

state 29

    (16) funcHead -> FUNCTION LPAREN ID . RPAREN ARROW returnType
    (17) funcHead -> FUNCTION LPAREN ID . construct RPAREN LPAREN fParams RPAREN ARROW returnType
    (19) funcHead -> FUNCTION LPAREN ID . construct RPAREN LPAREN RPAREN ARROW returnType
    (20) construct -> .

  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 49

  ! RPAREN          [ reduce using rule 20 (construct -> .) ]

    construct                      shift and go to state 50

state 30

    (18) funcHead -> FUNCTION LPAREN RPAREN . ARROW returnType

    ARROW           shift and go to state 51


state 31

    (4) classDecl -> CLASS ID LBRACE RBRACE .

    $end            reduce using rule 4 (classDecl -> CLASS ID LBRACE RBRACE .)


state 32

    (5) classDecl -> CLASS ID LBRACE memberDecl . RBRACE
    (8) memberDecl -> memberDecl . memberDecl
    (6) memberDecl -> . memberFuncDecl
    (7) memberDecl -> . memberVarDecl
    (8) memberDecl -> . memberDecl memberDecl
    (9) memberFuncDecl -> . FUNCTION ID COLON LPAREN fParams RPAREN ARROW returnType
    (10) memberFuncDecl -> . CONSTRUCTOR COLON LPAREN fParams RPAREN
    (11) memberFuncDecl -> . FUNCTION ID COLON LPAREN RPAREN ARROW returnType
    (12) memberFuncDecl -> . CONSTRUCTOR COLON LPAREN RPAREN
    (13) memberVarDecl -> . TYPE ID COLON TYPE SEMICOLON
    (14) memberVarDecl -> . TYPE ID COLON TYPE LBRACKET INTLIT RBRACKET SEMICOLON

    RBRACE          shift and go to state 53
    FUNCTION        shift and go to state 35
    CONSTRUCTOR     shift and go to state 36
    TYPE            shift and go to state 37

    memberDecl                     shift and go to state 52
    memberFuncDecl                 shift and go to state 33
    memberVarDecl                  shift and go to state 34

state 33

    (6) memberDecl -> memberFuncDecl .

    RBRACE          reduce using rule 6 (memberDecl -> memberFuncDecl .)
    FUNCTION        reduce using rule 6 (memberDecl -> memberFuncDecl .)
    CONSTRUCTOR     reduce using rule 6 (memberDecl -> memberFuncDecl .)
    TYPE            reduce using rule 6 (memberDecl -> memberFuncDecl .)


state 34

    (7) memberDecl -> memberVarDecl .

    RBRACE          reduce using rule 7 (memberDecl -> memberVarDecl .)
    FUNCTION        reduce using rule 7 (memberDecl -> memberVarDecl .)
    CONSTRUCTOR     reduce using rule 7 (memberDecl -> memberVarDecl .)
    TYPE            reduce using rule 7 (memberDecl -> memberVarDecl .)


state 35

    (9) memberFuncDecl -> FUNCTION . ID COLON LPAREN fParams RPAREN ARROW returnType
    (11) memberFuncDecl -> FUNCTION . ID COLON LPAREN RPAREN ARROW returnType

    ID              shift and go to state 54


state 36

    (10) memberFuncDecl -> CONSTRUCTOR . COLON LPAREN fParams RPAREN
    (12) memberFuncDecl -> CONSTRUCTOR . COLON LPAREN RPAREN

    COLON           shift and go to state 55


state 37

    (13) memberVarDecl -> TYPE . ID COLON TYPE SEMICOLON
    (14) memberVarDecl -> TYPE . ID COLON TYPE LBRACKET INTLIT RBRACKET SEMICOLON

    ID              shift and go to state 56


state 38

    (22) funcBody -> LBRACE statement RBRACE .

    $end            reduce using rule 22 (funcBody -> LBRACE statement RBRACE .)


state 39

    (30) assignStat -> variable assignOp . expr
    (38) expr -> . arithExpr
    (39) expr -> . relExpr
    (41) arithExpr -> . term addOp arithExpr
    (42) arithExpr -> . term
    (40) relExpr -> . arithExpr relOp arithExpr
    (43) term -> . factor multOp term
    (44) term -> . factor
    (45) factor -> . variable
    (46) factor -> . functionCall
    (47) factor -> . INTLIT
    (48) factor -> . FLOATLIT
    (49) factor -> . LPAREN arithExpr RPAREN
    (50) factor -> . NOT factor
    (51) factor -> . SIGN factor
    (52) variable -> . ID idnest
    (53) variable -> . ID idnest indice
    (36) functionCall -> . ID LPAREN aParams RPAREN

    INTLIT          shift and go to state 64
    FLOATLIT        shift and go to state 65
    LPAREN          shift and go to state 66
    NOT             shift and go to state 67
    SIGN            shift and go to state 68
    ID              shift and go to state 69

    variable                       shift and go to state 57
    expr                           shift and go to state 58
    arithExpr                      shift and go to state 59
    relExpr                        shift and go to state 60
    term                           shift and go to state 61
    factor                         shift and go to state 62
    functionCall                   shift and go to state 63

state 40

    (67) assignOp -> EQ .

    INTLIT          reduce using rule 67 (assignOp -> EQ .)
    FLOATLIT        reduce using rule 67 (assignOp -> EQ .)
    LPAREN          reduce using rule 67 (assignOp -> EQ .)
    NOT             reduce using rule 67 (assignOp -> EQ .)
    SIGN            reduce using rule 67 (assignOp -> EQ .)
    ID              reduce using rule 67 (assignOp -> EQ .)


state 41

    (31) ifStat -> IF LPAREN . relExpr RPAREN THEN statBlock ELSE statBlock
    (40) relExpr -> . arithExpr relOp arithExpr
    (41) arithExpr -> . term addOp arithExpr
    (42) arithExpr -> . term
    (43) term -> . factor multOp term
    (44) term -> . factor
    (45) factor -> . variable
    (46) factor -> . functionCall
    (47) factor -> . INTLIT
    (48) factor -> . FLOATLIT
    (49) factor -> . LPAREN arithExpr RPAREN
    (50) factor -> . NOT factor
    (51) factor -> . SIGN factor
    (52) variable -> . ID idnest
    (53) variable -> . ID idnest indice
    (36) functionCall -> . ID LPAREN aParams RPAREN

    INTLIT          shift and go to state 64
    FLOATLIT        shift and go to state 65
    LPAREN          shift and go to state 66
    NOT             shift and go to state 67
    SIGN            shift and go to state 68
    ID              shift and go to state 69

    relExpr                        shift and go to state 70
    arithExpr                      shift and go to state 71
    term                           shift and go to state 61
    factor                         shift and go to state 62
    variable                       shift and go to state 57
    functionCall                   shift and go to state 63

state 42

    (32) whileStat -> WHILE LPAREN . relExpr RPAREN statBlock
    (40) relExpr -> . arithExpr relOp arithExpr
    (41) arithExpr -> . term addOp arithExpr
    (42) arithExpr -> . term
    (43) term -> . factor multOp term
    (44) term -> . factor
    (45) factor -> . variable
    (46) factor -> . functionCall
    (47) factor -> . INTLIT
    (48) factor -> . FLOATLIT
    (49) factor -> . LPAREN arithExpr RPAREN
    (50) factor -> . NOT factor
    (51) factor -> . SIGN factor
    (52) variable -> . ID idnest
    (53) variable -> . ID idnest indice
    (36) functionCall -> . ID LPAREN aParams RPAREN

    INTLIT          shift and go to state 64
    FLOATLIT        shift and go to state 65
    LPAREN          shift and go to state 66
    NOT             shift and go to state 67
    SIGN            shift and go to state 68
    ID              shift and go to state 69

    relExpr                        shift and go to state 72
    arithExpr                      shift and go to state 71
    term                           shift and go to state 61
    factor                         shift and go to state 62
    variable                       shift and go to state 57
    functionCall                   shift and go to state 63

state 43

    (33) readStat -> READ LPAREN . variable RPAREN
    (52) variable -> . ID idnest
    (53) variable -> . ID idnest indice

    ID              shift and go to state 74

    variable                       shift and go to state 73

state 44

    (34) writeStat -> WRITE LPAREN . expr RPAREN
    (38) expr -> . arithExpr
